objects/BaaNSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BatchMaxData__c</fullName>
        <label>BatchMaxData</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NbDaysSendOK__c</fullName>
        <label>NbDaysSendOK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SmarepoID__c</fullName>
        <label>Smarepo ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BaaNSettings</label>
</CustomObject>